--- a/main.css
+++ b/main.css
@@ -33,3 +33,41 @@
     opacity: 0.7;
 }
 
+.mail-address {
+    display: none;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.mail-icon {
+    display: inline-block;
+    position: relative;
+}
+.mail-icon:hover .mail-address {
+    display: block;
+}
+
+
+.contact-info {
+    display: none;
+    position: absolute;
+    bottom: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    white-space: nowrap; /* Bu satır eklendi */
+}
+.contact-icon {
+    display: inline-block;
+    position: relative;
+}
+.contact-icon:hover .contact-info {
+    display: block;
+}
+
