--- a/main.css
+++ b/main.css
@@ -71,11 +71,27 @@
     display: block;
 }
 
-@media (max-width: 768px) {
-    .fa {
-        font-size: 20px;
-        padding: 10px;
+@media (max-width: 480px) {
+    #textBody {
+      padding: 50px 0;
     }
-}
-
+    h1 {
+      font-size: 200%;
+    }
+    p {
+      font-size: 120%;
+    }
+    .fa {
+      font-size: 25px;
+      padding: 15px;
+    }
+    .mail-address, .contact-info {
+      bottom: -35px;
+      font-size: 16px;
+    }
+    .contact-info {
+      width: 200px;
+    }
+  }
+  
   
